# Hopson-Arcade

./: .clang-format  .directory  .gitignore  CMakeCache.txt  CMakeLists.txt  HopsonArcade.sln  HopsonArcade.vcxproj  Makefile  README.md  SpaceInvaders.rc  SpaceInvaders.vcxproj  build.sh  cmake_install.cmake  debug.sh  f.py  headerfix.py  mkrel.bat  rename.py  resource.h  run.sh
Source/: DisplayInfo.h  Game.cpp  Game.h  Main.cpp  main.cpp
Source/Arcade/: Game.cpp  Game.h  Main.cpp  StateGameSelect.cpp  StateGameSelect.h
Source/Arcade/GameSelection/: GameSelect.cpp  GameSelect.h  StateGameSelect.cpp  StateGameSelect.h
Source/Framework/: Game.cpp  Game.h
Source/Framework/GUI/: Button.cpp  Button.h  StackMenu.cpp  StackMenu.h  Textbox.cpp  Textbox.h  Widget.cpp  Widget.h
Source/Framework/ResourceManager/: ResourceManager.h
Source/Framework/States/: StateBase.cpp  StateBase.h
Source/Framework/Util/: Animation.h  FPSCounter.cpp  FPSCounter.h  FileUtil.cpp  NonMoveable.h  Random.h  ToggleKey.h
Source/GUI/: Button.cpp  Button.h  StackMenu.cpp  StackMenu.h  Textbox.cpp  Widget.h
Source/Game/: AnimationRenderer.h  Collidable.cpp  Collidable.h  Explosion.cpp  ExplosionParticleSystem.cpp  ExplosionParticleSystem.h  GameDisplays.h  Invader.cpp  Invader.h  InvaderManager.cpp  InvaderManager.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  StarryBackground.cpp  StarryBackground.h  World.cpp  World.h
Source/Game/Entities/: Explosion.cpp  Invader.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
Source/Game/Entity/: Explosion.h  Invader.cpp  Invader.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Shield.cpp  Shield.h  UFO.cpp  UFO.h
Source/SpaceInvaders/: AnimationRenderer.cpp  AnimationRenderer.h  Collidable.cpp  Collidable.h  DisplayInfo.h  InvaderManager.cpp  InvaderManager.h  StarryBackground.cpp  StarryBackground.h  World.cpp  World.h
Source/SpaceInvaders/Entity/: Explosion.cpp  Explosion.h  Invader.cpp  Invader.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Shield.cpp  Shield.h  UFO.cpp  UFO.h
Source/SpaceInvaders/States/: StateHighscores.cpp  StateHighscores.h  StateMainMenu.cpp  StateMainMenu.h  StatePlaying.cpp  StatePlaying.h
Source/States/: StateBase.h  StateHighscores.cpp  StateHighscores.h  StateMainMenu.cpp  StateMainMenu.h  StatePlaying.cpp  StatePlaying.h
Source/Util/: Animation.h  FPSCounter.cpp  Maths.h  NonMoveable.h  Random.h  ToggleKey.h
SpaceInvaders/res/: scores.txt
cmake/: CompileFeatures.cmake
glom_output/: out.cpp
res/: scores.txt
res/SpaceInvaders/: info.txt  scores.txt
res/sfx/si/: credit.txt
scripts/: debug.sh  deploy.sh  run.sh
src/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp  game.cpp  main.cpp
src/Framework/GUI/: Button.cpp  StackMenu.cpp  StackMenu.h  Textbox.cpp  Widget.cpp  Widget.h
src/Framework/ResourceManager/: ResourceHolder.cpp  ResourceHolder.h
src/Framework/States/: StateBase.cpp  StateBase.h
src/Framework/Util/: Animation.cpp  FPSCounter.cpp  NonCopyable.h  Random.h  ToggleKey.cpp
src/SpaceInvaders/: AnimationRenderer.cpp  AnimationRenderer.h  Collidable.cpp  Collidable.h  DisplayInfo.h  InvaderManager.cpp  InvaderManager.h  StarryBackground.cpp  StarryBackground.h  World.h
src/SpaceInvaders/Entity/: Explosion.cpp  Explosion.h  Invader.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Shield.cpp  Shield.h  UFO.h
src/SpaceInvaders/States/: StateHighscores.h  StateMainMenu.cpp  StateMainMenu.h  StatePlaying.h
src/arcade/: CMakeLists.txt  game.cpp  game.h
src/arcade/arcade/: CMakeLists.txt  game.cpp  game.h
src/arcade/arcade/gui/: button.cpp  button.h  label.cpp  label.h  stack_menu.cpp  stack_menu.h  textbox.cpp  textbox.h  widget.cpp  widget.h
src/arcade/arcade/input/: keyboard.cpp  keyboard.h
src/arcade/arcade/resources/: resource_holder.cpp  resource_holder.h  resource_manager.h
src/arcade/arcade/state/: state_base.cpp  state_base.h
src/arcade/arcade/util/: animation.cpp  animation.h  file_util.cpp  file_util.h  fps_counter.cpp  fps_counter.h  maths.h  non_copyable.h  non_moveable.h  random.h  toggle_key.cpp  toggle_key.h
src/arcade/gui/: Textbox.cpp  button.h  textbox.h  widget.cpp
src/arcade/input/: keyboard.cpp
src/arcade/resources/: ResourceHolder.h  resource_holder.cpp  resource_manager.h
src/arcade/util/: FPSCounter.h  FileUtil.cpp  ToggleKey.h  animation.cpp  animation.h  file_util.cpp  file_util.h  non_moveable.h  toggle_key.cpp
src/input/: keyboard.cpp  keyboard.h
src/pong/: display_info.h  net.h  pong_player.h  pong_server.cpp  pong_server.h
src/pong/states/: state_error.cpp  state_error.h  state_lobby.cpp  state_lobby.h  (+2 more)
src/space_invaders/: CMakeLists.txt  InvaderManager.h  animation_renderer.cpp  animation_renderer.h  collidable.cpp  collidable.h  display_info.h  invader_manager.cpp  invader_manager.h  starry_background.cpp  starry_background.h  world.cpp  world.h
src/space_invaders/Entity/: Player.cpp  UFO.cpp
src/space_invaders/States/: StateHighscores.cpp  StateHighscores.h  StatePlaying.cpp  StatePlaying.h
src/space_invaders/entity/: explosion.cpp  explosion.h  invader.cpp  invader.h  player.cpp  player.h  projectile.cpp  projectile.h  shield.cpp  shield.h  ufo.cpp  ufo.h
src/space_invaders/states/: state_highscores.cpp  state_highscores.h  state_main_menu.cpp  state_main_menu.h  state_playing.cpp  state_playing.h
