
add_library(space_invaders
    AnimationRenderer.cpp
    StarryBackground.cpp
    InvaderManager.cpp
    World.cpp
    Collidable.cpp
    States/StateMainMenu.cpp
    States/StateHighscores.cpp
    States/StatePlaying.cpp
    Entity/Shield.cpp
    Entity/Invader.cpp
    Entity/Player.cpp
    Entity/Explosion.cpp
    Entity/Projectile.cpp
)